Endpoint Get tasks
