# internal/adapter/http/handlers/tasks.go
@@ -1,1 +1,35 @@
 package handlers
+
+import (
+	"net/http"
+	"ringover/internal/adapter/http/mapper"
+	"ringover/internal/adapter/http/middleware"
+	"ringover/internal/core/ports"
+	"ringover/pkg/apierrors"
+
+	"github.com/gin-gonic/gin"
+	"go.uber.org/zap"
+)
+
+type TaskHandler struct {
+	taskService ports.TaskService
+}
+
+func NewTaskHandler(taskService ports.TaskService) *TaskHandler {
+	return &TaskHandler{taskService: taskService}
+}
+
+func (h *TaskHandler) ListRootTasks(c *gin.Context) {
+	lang := middleware.GetLang(c)
+	tasks, err := h.taskService.ListRootTasks(c.Request.Context())
+	if err != nil {
+		zap.L().Error("failed to list root tasks", zap.Error(err))
+		c.JSON(
+			http.StatusInternalServerError,
+			apierrors.CreateError(http.StatusInternalServerError, apierrors.MsgFailListTask, lang),
+		)
+		return
+	}
+
+	c.JSON(http.StatusOK, mapper.ToTaskItems(tasks))
+}
